<resources>
    <string name="app_name">ArcheryStats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="table_header_number">Number</string>
    <string name="table_header_sum">Sum</string>
    <string name="table_header_average">Average</string>
    <string name="plot1_header">Score per 6 Shots</string>
    <string name="plot2_header">Distribution of Shots</string>
    <string name="main_shots">Shots:</string>
    <string name="main_save">Save</string>
    <string name="main_delete">del</string>
    <string name="menu_new_session">New Session</string>
    <string name="menu_load_Session">Load Session</string>
    <string name="menu_close_session">Close Session</string>
    <string name="menu_view_entries">View Entries</string>
    <string name="menu_special">Special</string>
    <string name="menu_new_custom_session">New Custom Session</string>
    <string name="menu_view_plots">View Plots</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_empty_fields_header">Empty Fields?</string>
    <string name="dialog_empty_fields_message">Some fields are empty</string>
    <string name="toast_no_session">No session loaded</string>
    <string name="toolbar_title_no_session">No Session</string>
    <string name="dialog_choose_session">Choose a session</string>
    <string name="dialog_start_new_custom_session">Start a New Custom Session</string>
    <string name="toast_invalid_filename">Not a valid file name (only azAZ09)</string>
    <string name="dialog_start_new_session_title">Start New Session</string>
    <string name="dialog_start_new_session_message">Are you sure you want to start a new session?</string>
    <string name="dialog_start_new_custom_session_hint">Session name</string>
</resources>
